@@ -76,6 +76,7 @@ along with postorius. If not, see &lt;<a class="reference external" href="http:/
 <li>missing csrf tokens in templates contributed by Richard Wackerbarth (LP: 996658)</li>
 <li>moderation: fixed typo in success message call</li>
 <li>installation documentation for Apache/mod_wsgi</li>
+<li>moved project files to separate branch</li>
 </ul>
 </div>
 <div class="section" id="alpha-1-space-farm">
