@@ -1,1 +1,1 @@
-Search.setIndex({objects:{tests:{tests:[3,0,1,""]}},terms:{all:[3,1,2],code:[3,2],forget:3,prefil:3,four:[],ackownledg:[],runserv:1,dirnam:[],follow:[3,1],profil:2,decid:[],depend:[2,1],authoris:[],mailman_them:[],descript:3,send:[],granci:2,under:2,introduc:[],merchant:2,sourc:[],everi:[],string:3,far:[],authbackend:[],none:3,offlin:[],util:3,context_processor:[],mechan:3,exact:3,contenttyp:[],administr:3,level:[],did:3,button:3,list:[3,2],"try":3,item:3,adjust:[],anna:2,quick:[],setup:[3,1,2],dir:[],pleas:3,modelbackend:[],impli:2,core:[],cfg:[],seper:[],request:3,past:[],second:1,download:1,further:[],click:3,compat:[],index:3,what:[],name_of_permiss:[],appear:[],richard:2,sum:[],abl:[3,1],current:3,delet:3,new_list1:3,postoriu:[0,1,2],franziska:[],"new":[0,2,3],net:[],"public":2,superus:1,publicli:1,gener:2,never:1,remeb:[],here:[],themself:[],ubuntu:[],path:1,along:2,modifi:[3,2],sinc:1,valu:3,search:[],mailinglist:[],vertifi:[],anymor:[],errorlog:[],host:[],jame:3,doctest:3,action:3,chang:1,mailman_media:[],contactpag:[],via:[],appli:[],app:[0,2,3],sponser:[],foundat:2,put:[],api:[],sponsel:[],instal:[0,1,2,3],middlewar:[],from:[3,1],describ:3,would:[],commun:[],doubl:3,two:[],perm:[],next:[],websit:[],few:[],call:2,typo:2,recommend:[],type:3,web_host:3,mailman_django:[],abspath:[],relat:3,ital:[],list_own:3,warn:[3,1],trail:[],berlio:[],stick:[],particular:2,hold:[],unpack:[],easiest:3,customlog:[],account:[2,1],join:[],alia:1,prepar:1,work:[],uniqu:[],dev:[2,1],archiv:3,can:[3,1,2],purpos:2,control:[],defer:2,sqlite:1,prompt:1,login_requir:3,tar:[],process:2,sudo:1,accept:2,topic:[],want:[3,1],contribut:2,alwai:1,cours:[],multipl:[],anoth:3,faulti:[],georg:3,write:[],how:1,reject:2,instead:3,simpl:[],css:1,updat:3,product:1,resourc:[0,3],farm:2,stop:3,earlier:[],usabl:[],befor:3,membership:3,date:1,end:[],hardcopi:[],third:1,postfix:[],bind:[],bootstrap:[],credenti:[],django:[0,1,2,3],alias:2,environ:1,adverrtis:3,jain:2,enter:3,fallback:[],automaticli:[],egg:[],order:1,listnam:3,help:[],becaus:3,has_perm:[],left:[],style:[],directli:3,fit:2,fix:2,browserid:2,better:[],requir:3,onc:[],mail:[3,2],hidden:[],main:[],might:[],guarente:[],them:1,"return":[],thei:3,python:[3,1],databs:1,auth:[],unfortuneatli:[],mention:3,front:3,now:[3,1],term:2,benst:[],somewher:1,name:3,anyth:[],edit:[3,2],config:[],postorius_error:[],authent:[],separ:3,easili:[],senarclen:2,each:3,debug:3,found:[3,1],went:3,mailman_test_bindir:[],domain:[3,2],replac:[],idea:[],procedur:[],realli:3,line:[3,1],redistribut:2,meta:3,"static":1,connect:[],our:3,todo:[],dependeci:[],out:2,shown:3,space:2,miss:2,develop:[0,1,2,3],publish:2,your:1,content:[0,3],daniel:2,rest_serv:[],got:[],correct:1,after:[3,1],insid:[],free:[3,2],standalon:[],reason:[],base:[],mailmanweb:[],lists_of_domain:[],releas:1,org:[2,1],"40mail":3,launch:[],could:[],wrong:3,keep:1,filter:[],thing:3,place:[],isn:[],root_urlconf:[],requireti:[],view:3,first:[3,1],softwar:2,rang:[],woun:[],render:[],feel:3,media_root:[],system:[],restrict:3,mai:[],instruct:[3,1],alreadi:3,done:3,least:3,authentif:3,owner:3,stabl:3,installed_app:[],open:3,gpl:[],differ:1,rrze:[],benedict:2,data:3,licens:2,natti:[],messag:[3,2],licenc:[],fullfil:[],"final":3,store:[],shell:3,option:3,real_nam:3,copi:2,specifi:3,gsoc:[],part:3,pars:3,priveledg:[],serv:1,enjoi:3,provid:[3,2],remov:[3,2],new_domain:[],project:1,postorius_standalon:1,were:3,posit:3,minut:[],fqdn_listnam:3,pre:[],descrip:[],ani:2,postorius_access:[],packag:1,gui:3,have:[3,1,2],tabl:1,need:[3,1],element:[],wsgiscriptalia:1,engin:1,inform:1,florian:[],destroi:[],client:[3,1],note:[3,1],also:1,exampl:3,take:[],indic:3,combin:[],singl:3,even:2,sure:3,kati:3,allow:[3,1],shall:3,usernam:[],object:3,most:3,plan:[],letter:3,watt:3,alpha:2,choos:3,"class":[],icon:[],collectstat:1,don:3,bzr:1,url:3,doc:[],later:[],cover:1,temporili:3,doe:3,deni:1,mm_membership:3,usual:[],dev_setup:[],wsgi:1,show:[3,2],text:3,liza:3,session:3,permiss:3,corner:[],fine:[],find:[],redirect:3,absolut:[],onli:[3,1],submit:3,locat:1,launchpad:1,copyright:2,explain:3,configur:[],apach:[2,1],should:[3,1,2],version:[2,1],suppos:[],templat:2,folder:1,local:[3,1],hope:2,media_url:[],nearli:[],get:[3,1],"__file__":[],pypi:1,obviou:[],csrf:2,awai:[],restart:[],template_dir:[],reload:1,common:[],restadmin:[],where:[],summari:3,wiki:[],set:[3,1,2],see:[3,2],domain_admin:[],result:[],respons:3,fail:3,wonder:[],awar:3,statu:3,error:[],correctli:[],databas:[3,1],someth:3,yet:[],behind:[],quickest:1,between:3,"import":3,subscript:3,email:3,realnam:[],correclti:[],advertis:3,subfold:[],thank:2,both:[],last:3,plugin:[],admin:1,howev:[],etc:1,instanc:3,context:[],delete_list:3,logout:[],login:[3,2],com:3,load:3,simpli:3,point:[],instanti:[],overview:3,address:3,header:[],non:[],linux:3,guid:[3,1],assum:1,backend:[],quit:[],trunk:[],mailman:[0,1,2,3],coupl:3,"0a7":[],been:3,compon:[],much:[],unsubscrib:[3,2],modif:[],addit:[],upcom:[],imag:1,xxx:[],togeth:3,rememb:[],i18n:[],ngeorg:3,those:3,"case":3,creativecommon:[],therefor:[],look:[],gnu:[2,1],plain:[],align:[],lesser:2,"while":1,dashboard:3,abov:3,mail_host:3,everyon:[],authentication_backend:[],new_list:[],almost:1,demo:[],metric:2,site:[3,1],itself:[],revis:[],decor:3,let:3,welcom:[],author:[],receiv:2,media:[],make:[3,1],belong:3,same:3,handl:[],html:[],split:[],document:[2,1],mod_wsgi:[2,1],finish:3,http:[3,1,2],webserv:1,upon:[],coder:1,moment:[],http_host:3,initi:2,mani:2,implement:2,expand:[],appropri:[],moder:2,framework:[],api_pass:3,well:[3,1],membership_set:[],without:[3,2],command:[],thi:[3,1,2],english:3,everyth:3,latest:1,summer:2,just:1,rest:3,mailman3:3,webui:[],restbackend:[],languag:3,web:[0,1,2],easi:[],project_path:[],had:[],list_summari:3,apache2:[],add:[3,2],valid:3,lawrenc:[],save:[],modul:3,futur:[],bin:[],applic:1,which:[3,1],stein:2,unter:[],prefer:1,writabl:1,know:1,gsoc_mailman:[],press:3,cooki:[],password:[],tweak:[],mailmanwebgsoc2011:[],template_context_processor:[],resid:1,like:[],success:[3,2],changelog:[0,2],restpass:[],server:[2,1],collect:1,href:[],setup_mm:3,either:3,page:3,www:2,right:[],acknowledg:[],creation:3,some:3,back:[],proper:2,home:[],funcit:[],distribut:2,basic:2,buildout:[],djangoproject:[],confirm:3,httpredirectobject:3,token:2,select:[],slash:[],necessari:1,testobject:3,localhost:3,refer:3,machin:3,httpresponseredirect:3,who:[],run:[3,1],bold:[],symlink:[],step:[],repositori:[],post:3,bazaar:1,mm_new_domain:[],stage:[],about:[],central:[],usa:3,mass_subscrib:3,rohan:2,acl:[],permission_requir:[],srv:1,act:1,fals:3,discard:2,processor:[],block:3,own:3,addus:[],status_cod:3,pythonpath:1,within:3,easy_instal:1,warranti:2,creativ:[],empti:3,contrib:[],api_us:3,manag:[3,1],choosen:3,span:3,log:3,wai:[3,1],"40exampl":3,execut:3,print:3,"long":[],custom:[],avail:[3,1],start:[3,1],reli:[],interfac:[2,1],includ:3,suit:3,"var":[],systers_django:[],"function":3,head:[],form:[3,2],offer:3,subscrib:[3,2],link:3,translat:3,teardown_mm:3,eas:[],"true":3,info:2,pull:1,succe:3,made:3,render_mailman_them:[],possibl:1,whether:3,access:[3,2],displai:3,below:3,memebership:[],otherwis:[],more:2,extend_ajax:[],proud:[],creat:[3,1],hardcod:[],dure:[3,2],doesn:[],exist:[],file:1,syncdb:1,pip:1,wackerbarth:2,check:[3,2],inc:2,again:[],readi:1,successfulli:[],googl:2,titl:[],user:[3,1,2],when:[],detail:[2,1],gettext:3,"default":[],mizyrycki:2,other:3,special:[],branch:1,test:3,you:[3,1,2],servernam:[],nice:3,why:3,prequir:[],consid:[],stai:[],outdat:[0,3],bullet:[],directori:[3,1],bottom:[],virtualhost:1,mailman3a7:[],mass:[3,2],came:[],time:[3,1],escap:3},objtypes:{"0":"py:module"},titles:["Postorius - The New Mailman Web UI","Installation","News / Changelog","Using the Django App - Developers Resource (outdated)"],objnames:{"0":["py","module","Python module"]},filenames:["index","setup","news","using"]})
+Search.setIndex({objects:{tests:{tests:[3,0,1,""]}},terms:{all:[3,1,2],code:[3,2],forget:3,prefil:3,four:[],ackownledg:[],runserv:1,dirnam:[],follow:[3,1],profil:2,decid:[],depend:[2,1],authoris:[],mailman_them:[],descript:3,send:[],granci:2,under:2,introduc:[],merchant:2,sourc:[],everi:[],string:3,far:[],authbackend:[],none:3,offlin:[],util:3,context_processor:[],mechan:3,exact:3,contenttyp:[],administr:3,level:[],did:3,button:3,list:[3,2],"try":3,item:3,adjust:[],anna:2,quick:[],setup:[3,1,2],dir:[],pleas:3,modelbackend:[],impli:2,core:[],cfg:[],seper:[],request:3,past:[],second:1,download:1,further:[],click:3,compat:[],index:3,what:[],name_of_permiss:[],appear:[],richard:2,sum:[],abl:[3,1],current:3,delet:3,new_list1:3,postoriu:[0,1,2],franziska:[],"new":[0,2,3],net:[],"public":2,superus:1,publicli:1,gener:2,never:1,remeb:[],here:[],themself:[],ubuntu:[],path:1,along:2,modifi:[3,2],sinc:1,valu:3,search:[],mailinglist:[],vertifi:[],anymor:[],errorlog:[],host:[],jame:3,doctest:3,action:3,chang:1,mailman_media:[],contactpag:[],via:[],appli:[],app:[0,2,3],sponser:[],foundat:2,put:[],api:[],sponsel:[],instal:[0,1,2,3],middlewar:[],from:[3,1],describ:3,would:[],commun:[],doubl:3,two:[],perm:[],next:[],websit:[],few:[],call:2,typo:2,descrip:[],type:3,web_host:3,mailman_django:[],abspath:[],relat:3,ital:[],list_own:3,warn:[3,1],trail:[],berlio:[],stick:[],particular:2,hold:[],unpack:[],easiest:3,customlog:[],account:[2,1],join:[],alia:1,prepar:1,work:[],uniqu:[],dev:[2,1],archiv:3,can:[3,1,2],purpos:2,control:[],defer:2,sqlite:1,prompt:1,login_requir:3,tar:[],process:2,sudo:1,accept:2,topic:[],want:[3,1],contribut:2,alwai:1,cours:[],multipl:[],anoth:3,faulti:[],georg:3,write:[],how:1,reject:2,instead:3,simpl:[],css:1,updat:3,product:1,resourc:[0,3],farm:2,stop:3,earlier:[],usabl:[],befor:3,membership:3,date:1,end:[],hardcopi:[],third:1,postfix:[],bind:[],bootstrap:[],credenti:[],django:[0,1,2,3],alias:2,environ:1,adverrtis:3,jain:2,enter:3,fallback:[],automaticli:[],egg:[],order:1,listnam:3,help:[],move:2,becaus:3,has_perm:[],left:[],style:[],directli:3,fit:2,fix:2,browserid:2,better:[],requir:3,onc:[],mail:[3,2],hidden:[],main:[],might:[],guarente:[],them:1,"return":[],thei:3,python:[3,1],databs:1,auth:[],unfortuneatli:[],mention:3,front:3,now:[3,1],term:2,benst:[],somewher:1,name:3,anyth:[],edit:[3,2],config:[],postorius_error:[],authent:[],separ:[3,2],easili:[],senarclen:2,each:3,debug:3,found:[3,1],went:3,mailman_test_bindir:[],recommend:[],domain:[3,2],replac:[],idea:[],procedur:[],realli:3,line:[3,1],redistribut:2,meta:3,"static":1,connect:[],our:3,todo:[],dependeci:[],out:2,shown:3,space:2,miss:2,robert:1,develop:[0,1,2,3],publish:2,your:1,content:[0,3],daniel:2,rest_serv:[],got:[],correct:1,after:[3,1],insid:[],free:[3,2],standalon:[],reason:[],base:[],mailmanweb:[],lists_of_domain:[],releas:1,org:[2,1],"40mail":3,launch:[],could:[],wrong:3,keep:1,filter:[],thing:3,place:[],isn:[],root_urlconf:[],requireti:[],view:3,first:[3,1],softwar:2,rang:[],woun:[],render:[],feel:3,media_root:[],system:[],restrict:3,mai:[],instruct:[3,1],alreadi:3,done:3,least:3,authentif:3,owner:3,stabl:3,installed_app:[],open:3,gpl:[],differ:1,rrze:[],benedict:2,data:3,licens:2,natti:[],messag:[3,2],licenc:[],fullfil:[],"final":3,store:[],shell:3,option:3,real_nam:3,copi:2,specifi:3,gsoc:[],part:3,pars:3,priveledg:[],serv:1,enjoi:3,provid:[3,1,2],remov:[3,2],new_domain:[],project:[2,1],postorius_standalon:1,were:3,posit:3,minut:[],fqdn_listnam:3,pre:[],ani:2,postorius_access:[],packag:1,gui:3,have:[3,1,2],tabl:1,need:[3,1],element:[],wsgiscriptalia:1,engin:1,inform:1,florian:[],destroi:[],client:[3,1],note:[3,1],also:1,exampl:3,take:[],indic:3,combin:[],singl:3,even:2,sure:3,kati:3,allow:[3,1],shall:3,usernam:[],object:3,most:3,plan:[],letter:3,watt:3,alpha:2,choos:3,"class":[],icon:[],collectstat:1,don:3,bzr:1,url:3,doc:[],later:[],cover:1,temporili:3,doe:3,deni:1,mm_membership:3,usual:[],dev_setup:[],wsgi:1,show:[3,2],text:3,liza:3,session:3,permiss:3,corner:[],fine:[],find:[],redirect:3,absolut:[],onli:[3,1],submit:3,locat:1,launchpad:1,copyright:2,explain:3,configur:[],apach:[2,1],should:[3,1,2],version:[2,1],suppos:[],templat:2,folder:1,local:[3,1],hope:2,media_url:[],nearli:[],get:[3,1],"__file__":[],pypi:1,obviou:[],csrf:2,awai:[],restart:[],template_dir:[],reload:1,common:[],restadmin:[],where:[],summari:3,wiki:[],set:[3,1,2],see:[3,1,2],domain_admin:[],result:[],respons:3,fail:3,wonder:[],awar:3,statu:3,error:[],correctli:[],databas:[3,1],someth:3,yet:[],behind:[],quickest:1,between:3,"import":3,subscript:3,email:3,realnam:[],correclti:[],advertis:3,subfold:[],thank:2,both:[],last:3,plugin:[],admin:1,howev:[],etc:1,instanc:3,context:[],delete_list:3,logout:[],login:[3,2],com:3,load:3,simpli:3,point:[],instanti:[],overview:3,address:3,header:[],non:[],linux:3,guid:[3,1],assum:1,backend:[],quit:[],trunk:[],mailman:[0,1,2,3],coupl:3,"0a7":[],been:3,compon:[],much:[],unsubscrib:[3,2],modif:[],addit:[],upcom:[],imag:1,xxx:[],togeth:3,rememb:[],i18n:[],ngeorg:3,niederreit:1,those:3,"case":3,creativecommon:[],therefor:[],look:[],gnu:[2,1],plain:[],align:[],lesser:2,"while":1,dashboard:3,abov:3,mail_host:3,everyon:[],authentication_backend:[],new_list:[],almost:1,demo:[],metric:2,site:[3,1],itself:[],revis:[],decor:3,let:3,welcom:[],author:[],receiv:2,media:[],make:[3,1],belong:3,same:3,handl:[],html:[],split:[],document:[2,1],mod_wsgi:[2,1],finish:3,http:[3,1,2],webserv:1,upon:[],coder:1,moment:[],http_host:3,initi:2,mani:2,implement:2,expand:[],appropri:[],moder:2,framework:[],api_pass:3,well:[3,1],membership_set:[],without:[3,2],command:[],thi:[3,1,2],english:3,everyth:3,latest:1,summer:2,just:1,rest:3,mailman3:3,webui:[],restbackend:[],languag:3,web:[0,1,2],easi:[],project_path:[],had:[],list_summari:3,apache2:[],add:[3,2],valid:3,lawrenc:[],save:[],modul:3,futur:[],bin:[],applic:1,which:[3,1],stein:2,unter:[],prefer:1,writabl:1,know:1,gsoc_mailman:[],press:3,cooki:[],password:[],tweak:[],mailmanwebgsoc2011:[],template_context_processor:[],resid:1,like:[],success:[3,2],changelog:[0,2],restpass:[],server:[2,1],collect:1,href:[],setup_mm:3,either:3,page:3,www:2,right:[],acknowledg:[],creation:3,some:3,back:[],proper:2,home:[],funcit:[],distribut:2,basic:2,buildout:1,djangoproject:[],confirm:3,httpredirectobject:3,token:2,select:[],slash:[],necessari:1,testobject:3,localhost:3,refer:3,machin:3,httpresponseredirect:3,who:[],run:[3,1],bold:[],symlink:[],step:[],repositori:[],post:3,bazaar:1,mm_new_domain:[],stage:[],about:[],central:[],usa:3,mass_subscrib:3,rohan:2,acl:[],permission_requir:[],srv:1,act:1,fals:3,discard:2,processor:[],block:3,own:3,addus:[],status_cod:3,pythonpath:1,within:3,easy_instal:1,warranti:2,creativ:[],empti:3,contrib:[],api_us:3,manag:[3,1],choosen:3,span:3,log:3,wai:[3,1],"40exampl":3,execut:3,print:3,"long":[],custom:[],avail:[3,1],start:[3,1],reli:[],interfac:[2,1],includ:3,suit:3,"var":[],systers_django:[],"function":3,head:[],form:[3,2],offer:3,subscrib:[3,2],link:3,translat:3,teardown_mm:3,eas:[],"true":3,info:2,pull:1,succe:3,made:3,render_mailman_them:[],possibl:1,whether:3,access:[3,2],displai:3,below:3,memebership:[],otherwis:[],more:2,extend_ajax:[],proud:[],creat:[3,1],hardcod:[],dure:[3,2],doesn:[],exist:[],file:[2,1],syncdb:1,pip:1,wackerbarth:2,check:[3,2],inc:2,again:[],readi:1,successfulli:[],googl:2,titl:[],user:[3,1,2],when:[],detail:[2,1],gettext:3,"default":[],mizyrycki:2,other:3,special:[],branch:[2,1],test:3,you:[3,1,2],servernam:[],nice:3,why:3,prequir:[],consid:[],stai:[],outdat:[0,3],bullet:[],directori:[3,1],bottom:[],virtualhost:1,mailman3a7:[],mass:[3,2],came:[],time:[3,1],escap:3},objtypes:{"0":"py:module"},titles:["Postorius - The New Mailman Web UI","Installation","News / Changelog","Using the Django App - Developers Resource (outdated)"],objnames:{"0":["py","module","Python module"]},filenames:["index","setup","news","using"]})
