@@ -26,8 +26,8 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="Postorius 1.0a2 documentation" href="index.html" />
-    <link rel="next" title="Using the Django App - Developers Resource" href="using.html" />
-    <link rel="prev" title="News" href="news.html" /> 
+    <link rel="next" title="Using the Django App - Developers Resource (outdated)" href="using.html" />
+    <link rel="prev" title="News / Changelog" href="news.html" /> 
   </head>
   <body>
     <div class="related">
@@ -40,10 +40,10 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="using.html" title="Using the Django App - Developers Resource"
+          <a href="using.html" title="Using the Django App - Developers Resource (outdated)"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="news.html" title="News"
+          <a href="news.html" title="News / Changelog"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">Postorius 1.0a2 documentation</a> &raquo;</li> 
       </ul>
@@ -124,6 +124,11 @@ $ cd ..</pre>
 <p>This will create the <tt class="docutils literal"><span class="pre">.db</span> <span class="pre">file</span></tt> (if you ar using SQLite) and will setup all the
 necessary db tables. You will also be prompted to create a superuser which
 will act as an admin account for Postorius.</p>
+<div class="admonition-see-also admonition seealso">
+<p class="first admonition-title">See also</p>
+<p class="last">Robert Niederreiter has provided a <a class="reference external" href="https://github.com/bluedynamics/mailman.buildout">buildout for GNU Mailman 3 and
+Postorius</a>.</p>
+</div>
 </div>
 <div class="section" id="running-the-development-server">
 <h2>Running the development server<a class="headerlink" href="#running-the-development-server" title="Permalink to this headline">¶</a></h2>
@@ -196,10 +201,10 @@ site directory. All you have to do is to change into the
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="news.html"
-                        title="previous chapter">News</a></p>
+                        title="previous chapter">News / Changelog</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="using.html"
-                        title="next chapter">Using the Django App - Developers Resource</a></p>
+                        title="next chapter">Using the Django App - Developers Resource (outdated)</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/setup.txt"
@@ -232,10 +237,10 @@ site directory. All you have to do is to change into the
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="using.html" title="Using the Django App - Developers Resource"
+          <a href="using.html" title="Using the Django App - Developers Resource (outdated)"
              >next</a> |</li>
         <li class="right" >
-          <a href="news.html" title="News"
+          <a href="news.html" title="News / Changelog"
              >previous</a> |</li>
         <li><a href="index.html">Postorius 1.0a2 documentation</a> &raquo;</li> 
       </ul>
